Added modifier form component, range and fields style fixes

--- a/src/components/Calculator/elements/Fields/Fields.module.scss
+++ b/src/components/Calculator/elements/Fields/Fields.module.scss
@@ -8,6 +8,11 @@
     padding: 0.5rem;
     position: relative;
     cursor: pointer;
+    user-select: none;
+  }
+
+  details[open] summary ~ * {
+    animation: sweep 0.5s ease-in-out;
   }
 
   .fieldset {
@@ -18,5 +23,16 @@
     color: var(--contrast);
     padding: 16px;
     border-radius: 4px;
+  }
+}
+
+@keyframes sweep {
+  0% {
+    opacity: 0;
+    margin-left: -10px;
+  }
+  100% {
+    opacity: 1;
+    margin-left: 0px;
   }
 }
