--- a/src/components/Calculator/elements/Range/Range.module.scss
+++ b/src/components/Calculator/elements/Range/Range.module.scss
@@ -1,5 +1,6 @@
 .label {
   grid-column: 1;
+  user-select: none;
 }
 
 input[type='range'].input {
@@ -48,4 +49,5 @@ input[type='range'].input {
   padding: 1px 3px;
   text-align: center;
   grid-column: 3;
+  user-select: none;
 }
