--- a/src/components/Calculator/elements/PokeController/PokeController.module.scss
+++ b/src/components/Calculator/elements/PokeController/PokeController.module.scss
@@ -12,10 +12,20 @@
   .selector {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     cursor: pointer;
-    border: 1px solid var(--contrast);
-    padding: 4px;
+    padding: 10px 7px;
     border-radius: 4px;
+
+    .info {
+      display: flex;
+      flex-flow: column nowrap;
+      align-items: center;
+    }
+
+    > div:last-child {
+      flex-flow: column nowrap;
+    }
   }
 
   .checkbox {
