--- a/src/components/Calculator/Calculator.module.scss
+++ b/src/components/Calculator/Calculator.module.scss
@@ -22,6 +22,9 @@
   }
 
   .fieldset {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 16px;
     background-color: var(--card);
     border: none;
     border-radius: 4px;
