Updated reset button

--- a/src/components/Calculator/elements/Range/Range.module.scss
+++ b/src/components/Calculator/elements/Range/Range.module.scss
@@ -8,7 +8,7 @@ input[type='range'].input {
   -webkit-appearance: none;
   height: 7px;
   align-self: center;
-  background: rgba(255, 255, 255, 0.6);
+  background: grey;
   border-radius: 5px;
   background-image: linear-gradient(var(--badge), var(--badge));
   background-repeat: no-repeat;
