--- a/src/components/Calculator/elements/General/General.module.scss
+++ b/src/components/Calculator/elements/General/General.module.scss
@@ -25,4 +25,10 @@
       top: 0 !important;
     }
   }
+
+  .gender {
+    width: 100%;
+    min-width: 125px !important;
+    margin-left: auto;
+  }
 }
