--- a/src/components/Badges/elements/BadgeDetail/BadgeDetail.module.scss
+++ b/src/components/Badges/elements/BadgeDetail/BadgeDetail.module.scss
@@ -8,6 +8,10 @@
   display: flex;
   gap: 10px;
   margin-bottom: 5px;
+
+  :global(.ui.radio.checkbox > label) {
+    color: var(--contrast);
+  }
 }
 
 .gymPokemon {
