--- a/src/components/Calculator/elements/CalculatorHeader/CalculatorHeader.module.scss
+++ b/src/components/Calculator/elements/CalculatorHeader/CalculatorHeader.module.scss
@@ -1,6 +1,6 @@
 .header {
-  display: flex;
-  flex-flow: row nowrap;
+  display: grid;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
   grid-column: 1 / -1;
   gap: 10px;
   align-items: center;
@@ -9,31 +9,48 @@
   border-radius: 4px;
   padding: 8px;
 
-  .button > i {
-    margin-left: 6px !important;
-    margin-right: 0 !important;
+  .options {
+    grid-column: 1 / -1;
+    margin-left: auto;
+
+    .button > i {
+      margin-left: 6px !important;
+      margin-right: 0 !important;
+    }
+
+    .genSelector {
+      width: 100%;
+      min-width: 130px !important;
+      max-width: 130px;
+      background-color: transparent !important;
+      color: var(--contrast) !important;
+
+      > div {
+        color: var(--contrast) !important;
+      }
+
+      > i {
+        color: var(--contrast);
+        top: 0 !important;
+      }
+    }
   }
 
   .primary {
+    display: flex;
+    grid-column: 1 / -1;
+    width: 100%;
     color: var(--contrast);
     font-weight: bold;
-    margin-right: auto;
-  }
 
-  .genSelector {
-    width: 100%;
-    min-width: 130px !important;
-    max-width: 130px;
-    background-color: transparent !important;
-    color: var(--contrast) !important;
-
-    > div {
-      color: var(--contrast) !important;
+    > output {
+      text-align: center;
+      margin: auto;
+      justify-self: center;
     }
 
     > i {
-      color: var(--contrast);
-      top: 0 !important;
+      justify-self: flex-end;
     }
   }
 }
