--- a/src/components/Calculator/Calculator.module.scss
+++ b/src/components/Calculator/Calculator.module.scss
@@ -17,4 +17,26 @@
     border-radius: 4px;
     overflow: auto;
   }
+
+  .placeholder {
+    grid-column: 1 / -1;
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 15px;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-size: 16px;
+    color: var(--contrast);
+
+    > svg {
+      width: 50%;
+      max-width: 275px;
+
+      path {
+        fill: var(--contrast);
+      }
+    }
+  }
 }
