Split up pokemon default values, correctly set default values when switching pokemon, active style adjustments for primary move

--- a/src/components/Calculator/elements/CalculatorHeader/CalculatorHeader.module.scss
+++ b/src/components/Calculator/elements/CalculatorHeader/CalculatorHeader.module.scss
@@ -86,6 +86,11 @@
           text-decoration: underline;
         }
       }
+
+      .active {
+        color: var(--badge);
+        font-weight: bold;
+      }
     }
   }
 }
