Added mobile responsiveness to calculator, moved around constants, set default status to Healthy

--- a/src/components/Calculator/elements/PokeController/PokeController.module.scss
+++ b/src/components/Calculator/elements/PokeController/PokeController.module.scss
@@ -14,8 +14,11 @@
     margin-left: auto;
   }
 
-  :global(.ui.checkbox label),
-  :global(.ui.checkbox input:focus ~ label) {
+  .showAll {
+    display: flex;
+    align-items: center;
+    gap: 8px;
     color: var(--contrast);
+    align-self: flex-end;
   }
 }
