--- a/src/components/Calculator/Calculator.module.scss
+++ b/src/components/Calculator/Calculator.module.scss
@@ -7,6 +7,7 @@
   column-gap: 8px;
   padding: 8px;
   overflow: auto;
+  position: relative;
 
   .fieldset {
     display: flex;
@@ -16,6 +17,13 @@
     border: none;
     border-radius: 4px;
     overflow: auto;
+  }
+
+  @media (max-width: 750px) {
+    padding-bottom: 24px;
+    .fieldset {
+      grid-column: 1 / -1;
+    }
   }
 
   .placeholder {
@@ -36,6 +44,44 @@
 
       path {
         fill: var(--contrast);
+      }
+    }
+  }
+
+  .tabs {
+    display: none;
+    flex-flow: row nowrap;
+    list-style: none;
+    margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: grey;
+
+    @media (max-width: 750px) {
+      display: flex;
+    }
+
+    .tab {
+      flex: 1;
+      text-align: center;
+      padding: 4px;
+      background-color: var(--bgsecondary);
+      border-top: 1px solid #cccccc;
+      color: var(--contrast);
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
+
+      &:first-child {
+        border-right: 1px solid #cccccc;
+      }
+
+      &.active {
+        color: var(--badge);
       }
     }
   }
