Refactored useCalculate, various style fixes, included isSwitching for calculations

--- a/src/components/Calculator/elements/PokeController/PokeController.module.scss
+++ b/src/components/Calculator/elements/PokeController/PokeController.module.scss
@@ -24,8 +24,8 @@
 
     .dropdown {
       margin-right: auto;
+      color: black;
       > i {
-        color: var(--contrast);
         top: 0 !important;
       }
     }
