--- a/src/components/Calculator/elements/MainField/MainField.module.scss
+++ b/src/components/Calculator/elements/MainField/MainField.module.scss
@@ -19,6 +19,10 @@
     text-align: center;
     z-index: 1;
 
+    @media (max-width: 550px) {
+      right: -125px;
+    }
+
     :global(.ui.radio.checkbox > label) {
       color: var(--contrast);
       font-size: 14px;
