--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -53,35 +53,31 @@
     display: flex;
     flex-flow: row wrap;
     gap: 5px;
-  }
 
-  .github {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 48px;
-    padding: 5px;
-    min-height: 26px;
-    font-size: 26px;
-    border: 2px solid #ffffff;
-    border-radius: 4px;
-    color: #ffffff;
-    position: relative;
-    > i {
-      padding-top: 2px;
-    }
-    &:hover {
-      background-color: #ffffff;
-      color: black;
-    }
+    .socialButton {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 48px;
+      padding: 5px;
+      min-height: 26px;
+      font-size: 26px;
+      border: 2px solid #ffffff;
+      border-radius: 4px;
+      color: #ffffff;
+      position: relative;
+      > i {
+        padding-top: 2px;
+      }
+      &:hover {
+        background-color: #ffffff;
+        color: black;
+      }
 
-    > span {
-      bottom: -5px;
-      font-size: 12px;
-    }
-
-    @media (max-width: 550px) {
-      padding: 0 5px;
+      > span {
+        bottom: -5px;
+        font-size: 12px;
+      }
     }
   }
 }
